# picarus_takeout

./: .travis.yml  CMakeLists.txt  README  README.md  README.rst  build.sh  requirements.txt  setup.py
go/: picarus_takeout.go
java/: PicarusTakeout.java  PicarusTakeoutJNI.c  build.sh
picarus_takeout/: ARMarkerDetector.cpp  ARMarkerDetector.hpp  BOVWImageFeature.cpp  BOVWImageFeature.hpp  BRISKImageFeature2d.cpp  BRISKImageFeature2d.hpp  BinaryCollector.cpp  BinaryCollector.hpp  BinaryPredictor.cpp  BinaryPredictor.hpp  BlocksImageMultiFeature.cpp  BlocksImageMultiFeature.hpp  CMakeLists.txt  FREAKImageFeature2d.cpp  FREAKImageFeature2d.hpp  FaceImageObjectDetector.cpp  FaceImageObjectDetector.hpp  GISTImageFeature.cpp  GISTImageFeature.hpp  HOGBOVWImageFeature.cpp  HOGImageMaskFeature.cpp  HOGImageMaskFeature.hpp  HammingFeature2dHashIndex.cpp  HammingFeature2dHashIndex.hpp  HammingHashIndex.cpp  HammingHashIndex.hpp  HammingMultiIndex.cpp  HammingMultiIndex.hpp  HashIndex.cpp  HashIndex.hpp  Hasher.cpp  Hasher.hpp  HistogramImageFeature.cpp  HistogramImageFeature.hpp  HomographyRansac.cpp  HomographyRansac.hpp  ImageFeature.cpp  ImageFeature.hpp  ImageFeature2d.cpp  ImageFeature2d.hpp  (+64 more)
picarus_takeout/gist/: gist.c  gist.h  gist_wrapper.c  gist_wrapper.h  standalone_image.c  standalone_image.h
tests/: model_blame.py  test_models.py  test_takeout.py  valgrind_suppressions.val
utils/: main.go
