cmake_minimum_required(VERSION 2.8)
add_executable(picarus LocalNBNNClassifier.cpp knearest_neighbor.c opencv_helpers.cpp PixelsImageFeature.cpp ImageMaskFeature.cpp ImageMultiFeature.cpp FaceImageObjectDetector.cpp ImageObjectDetector.cpp BinaryCollector.cpp BlocksImageMultiFeature.cpp BOVWImageFeature.cpp picarus_takeout.cpp HOGImageMaskFeature.cpp features.cc ModelChain.cpp Model.cpp picarus_takeout_main.cpp ImagePreprocessor.cpp BinaryPredictor.cpp HistogramImageFeature.cpp ImageFeature.cpp picarus_math.c LinearClassifier.cpp ImageFeature2d.cpp BRISKImageFeature2d.cpp pyramid_histogram_aux.c bovw_aux.c GISTImageFeature.cpp HashIndex.cpp SphericalHashIndex.cpp hamming_aux.c SphericalHasher.cpp Hasher.cpp gist/gist.c gist/gist_wrapper.c gist/standalone_image.c)

add_executable(spherical_hasher_train spherical_hasher_train.c spherical_hasher_train_main.c)
add_definitions(-DUSE_BLAS)
if(CMAKE_COMPILER_IS_GNUCXX)
    set(CMAKE_CXX_FLAGS "-O2 -g -Wall -Wextra")
endif()
if(CMAKE_COMPILER_IS_GNUC)
    set(CMAKE_CXX_FLAGS "-O2 -g -Wall -Wextra")
endif()
target_link_libraries(picarus blas msgpack opencv_highgui opencv_core opencv_imgproc opencv_objdetect opencv_features2d fftw3f)